# terani

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/structs/: animation.rs  frame.rs  mod.rs  scheduler.rs
src/text_effects/: blinking.rs  climbing.rs  color_changing.rs  mod.rs  scattering.rs  scrolling.rs  text_effect.rs  typewriter.rs
