[package]
name = "terani"
version = "0.1.0"
edition = "2021"
authors = ["Small San"]
readme = "README.md"
repository = "https://github.com/Smallsan/terani"

description = "A Terminal Animator Engine In Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "terani"
crate-type = ["lib"]

[dependencies]
colored = "2.1.0"
crossterm = "0.27.0"
rand = "0.8.5"
textwrap = "0.16.1"
